# file_master

./: .env.example  .gitignore  IDENTITY.md  MODEL_SETUP.md  README.md  USER.md  V3_UPGRADE.md  create_contract.py  create_real_contract.py  package.json  pyproject.toml  requirements.txt
examples/: extract_contract.py
mcp_server/: CALL_GUIDE.md  check_status.sh  daemon_server.py  run_server.py  start_server.py  test_mcp.py
src/: index.ts
src/file_master/: __init__.py  config.py  server.py
src/file_master/plugins/: __init__.py  pdf_extract.py
src/file_master/services/: __init__.py  extractor.py  extractor_v2.py  extractor_v3.py  pdf_reader.py
tests/: TEST_GUIDE.md  TEST_REPORT.md  TEST_STEPS.md  test_pdf_extract.py
