[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file_master"
version = "0.1.0"
description = "MCP plugins for file processing: PDF reading, image recognition, key information extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "futureLidong", email = "future@openclaw.local"}
]
keywords = ["mcp", "pdf", "ocr", "document", "file-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pdfplumber>=0.11.0",
    "requests>=2.31.0",
    "dashscope>=1.14.0",
]

[project.optional-dependencies]
ocr = [
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
file-master = "file_master.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/file_master"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
